# system-prompt-designer

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MIGRATION_GUIDE.md  Makefile  README.md  WORKBENCH_DESIGN.md  pyproject.toml  run-tests.sh  test-agent.agent-spec.md
.claude/: settings.local.json
_DOCS/: Brief_Agent_Governance_Refactor_Report.docx  Brief_Agent_Governance_Refactor_Report_v2.docx  Brief_agent_prompt_design_learnings.md  Divergent-Semantic-Architectures_A-Comparative-Analysis-of-Human-and-Large-Language-Model-Conceptual-Understanding.md  Extended_Prompt_Design_Ortogonality.md  Intent-Context-Curation-Trust_Framework_VERBATIM.docx  Leanrinings_from_prompt_design_non_reasoning.md  Linguistics_report_LLM_vs_Human.md  PROMPT_DESIGN_HANDBOOK.md  Prompt_Design_Framework.md  breif-generator-prompt-26-02-2026.md  brief-agent-master-promtp.md  prompt-TKDSL-workframe.prompt-design.md  prompt-dsl-language-research.md
_DOCS/Graph/: 00-Index.md  (+20 more)
prompt_design_framework/: 00-Linguistic-Foundations.md  01-Discovery-and-Tiering.md  02-Structural-Orthogonality.md  03-Hardening-and-Validation.md  04-DSL-and-Token-Optimization.md  05-Anti-Patterns-and-Refactoring.md  Index.md
prompt_design_system/: __init__.py  agents.py  cli.py  config.py  models.py  patterns.py  prompt_templates.py  providers.py  rule_blocks.py  spec_parser.py  storage.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_integration.py  test_models.py  test_patterns.py  test_providers.py  test_rule_blocks.py  test_spec_parser.py  test_storage.py
(+45 files in other folders)
