[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-design-system"
version = "0.1.0"
description = "Agentic system for designing and evaluating system prompts using an orthogonal Task/Plan/Rule Blocks framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Superloop", email = "dev@superloop.local" }
]
dependencies = [
    "openai>=1.57.0",
    "pydantic>=2.9.0",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
promptctl = "prompt_design_system.cli:app"

[tool.setuptools.packages.find]
include = ["prompt_design_system*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E203",
    "E501",
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

